Update website content

--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
                                     <table style="width:100%;border:0;">
                                         <tr>
                                             <!-- Left: Figure -->
-                                            <td style="width:50%;padding-right:20px;vertical-align:top;">
+                                            <td style="width:50%;padding-right:20px;vertical-align:middle;">
                                                 <figure style="margin:0;">
                                                     <img src="images/disOpt.gif"
                                                         alt="Convergence errors of distributed optimization under parameter variations and disturbances"
@@ -63,7 +63,7 @@
                                             </td>
 
                                             <!-- Right: Text -->
-                                            <td style="width:50%;vertical-align:top;">
+                                            <td style="width:50%;vertical-align:middle;">
                                                 <p>
                                                     Distributed optimization enables a network of agents to solve a
                                                     global objective using only local data and
@@ -107,7 +107,7 @@
         <table style="width:100%;border:0px;">
             <tr>
                 <!-- 左列：图片 -->
-                <td style="width:50%; padding-right:20px; vertical-align:top;">
+                <td style="width:50%; padding-right:20px; vertical-align:middle;">
                     <!-- 改动：重新添加 figure 和 figcaption 来显示标题 -->
                     <figure style="margin:0;">
                         <img src="images/performance.png" 
@@ -121,7 +121,7 @@
 
                 <!-- 右列：文字描述 -->
                 <!-- 改动：宽度从70%减小到60% -->
-                <td style="width:50%; vertical-align:top;">
+                <td style="width:50%; vertical-align:middle;">
                     <p>
                         Urban traffic signals are often fixed or heuristically actuated, and they struggle to handle uncertain, time-varying 
                         demand. I use a <strong>data-driven</strong> approach that learns traffic dynamics from 
