--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
                                     <table style="width:100%;border:0;">
                                         <tr>
                                             <!-- Left: Figure -->
-                                            <td style="width:50%;padding-right:20px;vertical-align:middle;">
+                                            <td style="width:50%;padding-right:20px;vertical-align:top;">
                                                 <figure style="margin:0;">
                                                     <img src="images/disOpt.gif"
                                                         alt="Convergence errors of distributed optimization under parameter variations and disturbances"
@@ -63,7 +63,7 @@
                                             </td>
 
                                             <!-- Right: Text -->
-                                            <td style="width:50%;vertical-align:middle;">
+                                            <td style="width:50%;vertical-align:top;">
                                                 <p>
                                                     Distributed optimization enables a network of agents to solve a
                                                     global objective using only local data and
