Update website content

--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
                         <tbody>
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
-                                    <h2>Distribued Optimization</h2>
+                                    <h2>Robust Distribued Optimization</h2>
                                     <ol>
                                         <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Distributed Optimization of
                                             Nonlinear Multi-Agent Systems with Disturbance Rejection," <em>IEEE
@@ -75,7 +75,7 @@
                                     </ol>
 
 
-                                    <h2>Traffic Signal Optimization</h2>
+                                    <h2>Data-Driven Traffic Signal Optimization</h2>
                                     <ol>
                                         <li><strong>Tong Liu</strong>, Qichao Wang, Hong Wang and Zhong-Ping Jiang,
                                             "Model Predictive Control for Urban Traffic Signals with Stability
