Update website content

--- a/research.html
+++ b/research.html
@@ -243,26 +243,51 @@
                                     <hr style="border: 0; height: 1px; background: #ddd;">
                                 </td>
                             </tr>
-
+                            
                             <!-- 研究方向 4 -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h3>Reinforcement Learning for Energy-Efficient Train Operation</h3>
-                                    <table style="width:100%;border:0px;">
+                                    <table style="width:100%;border:0;">
                                         <tr>
-                                            <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Train Operation Image"
-                                                    style="width:100%; border-radius:10px;">
+                                            <!-- Left: Figure -->
+                                            <td style="width:50%;padding-right:20px;vertical-align:top;">
+                                                <figure style="margin:0;">
+                                                    <img src="images/opt.jpg"
+                                                        alt="Optimal speed profiles under speed limit"
+                                                        style="width:100%;border-radius:10px;">
+                                                    <figcaption
+                                                        style="text-align:center;font-style:italic;margin-top:5px;">
+                                                        Optimal speed profiles for energy-efficient train operation
+                                                    </figcaption>
+                                                </figure>
                                             </td>
-                                            <td style="width:70%;">
+
+                                            <!-- Right: Text -->
+                                            <td style="width:50%;vertical-align:top;">
                                                 <p>
-                                                    在这里写下关于“强化学习在节能火车运营中的应用”研究方向的详细介绍。可以包括问题的建模、算法设计和实验结果。
+                                                     在这里写下关于“强化学习在节能火车运营中的应用”研究方向的详细介绍。可以包括问题的建模、算法设计和实验结果。
+                                                </p>
+                                                <p>
+                                                    My work develops <strong>robust</strong> algorithms that provably
+                                                    converge despite complex agent dynamics,
+                                                    parametric uncertainties, and exogenous disturbances. We co-design
+                                                    the
+                                                    optimizer and controller—leveraging <em>output regulation</em>,
+                                                    <em>extremum seeking</em>,
+                                                    and <em>reinforcement learning</em>—and
+                                                    certify stability and performance using the <em>small-gain
+                                                        theorem</em> and <em>singular perturbation
+                                                        theory</em>. Applications include distributed computation,
+                                                    sensor networks, robotic
+                                                    swarms, and smart grids.
                                                 </p>
                                             </td>
                                         </tr>
                                     </table>
                                 </td>
                             </tr>
+
 
                         </tbody>
                     </table>
