Update website content

--- a/research.html
+++ b/research.html
@@ -113,7 +113,7 @@
                                                     <img src="images/performance.png" alt="Performance comparison"
                                                         style="width:100%; border-radius:10px; display: block;">
                                                     <figcaption
-                                                        style="text-align:center; padding-top:8px; font-size:14px; color:#555;">
+                                                        style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
                                                         Performance comparison
                                                     </figcaption>
                                                 </figure>
@@ -188,7 +188,7 @@
                                             <img src="images/ringroad.jpg" alt="Mixed traffic on a ring road"
                                                 style="width:100%; height:220px; object-fit:contain; border-radius:10px; display: block;">
                                             <figcaption
-                                                style="text-align:center; padding-top:8px; font-size:14px; color:#555;">
+                                                style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
                                                 Mixed traffic on a ring road
                                             </figcaption>
                                         </figure>
@@ -196,11 +196,11 @@
                                         <!-- 第二个图片带标题 -->
                                         <figure style="width:50%; margin:0;">
                                             <!-- 改动：更新了图片和标题，同时保留对齐样式 -->
-                                            <img src="images/converg.png" alt="Convergence of controller parameters"
+                                            <img src="images/converg.png" alt="Convergence of the controller parameters"
                                                 style="width:100%; height:220px; object-fit:contain; border-radius:10px; display: block;">
                                             <figcaption
-                                                style="text-align:center; padding-top:8px; font-size:14px; color:#555;">
-                                                Convergence of controller parameters
+                                                style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
+                                                Convergence of the controller parameters
                                             </figcaption>
                                         </figure>
                                     </div>
