Update website content

--- a/research.html
+++ b/research.html
@@ -114,7 +114,7 @@
                                                         style="width:100%; border-radius:10px; display: block;">
                                                     <figcaption
                                                         style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
-                                                        Performance comparison
+                                                        Performance comparison.
                                                     </figcaption>
                                                 </figure>
                                             </td>
@@ -189,7 +189,7 @@
                                                 style="width:100%; height:220px; object-fit:contain; border-radius:10px; display: block;">
                                             <figcaption
                                                 style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
-                                                Mixed traffic on a ring road
+                                                Mixed traffic on a ring road.
                                             </figcaption>
                                         </figure>
 
@@ -200,7 +200,7 @@
                                                 style="width:100%; height:220px; object-fit:contain; border-radius:10px; display: block;">
                                             <figcaption
                                                 style="text-align:center; font-style:italic; padding-top:8px; font-size:14px; color:#555;">
-                                                Convergence of the controller parameters
+                                                Convergence of the controller parameters.
                                             </figcaption>
                                         </figure>
                                     </div>
@@ -258,7 +258,7 @@
                                                         style="width:100%;border-radius:10px;">
                                                     <figcaption
                                                         style="text-align:center;font-style:italic;margin-top:5px;">
-                                                        Optimal speed profiles for energy-efficient train operation
+                                                        Optimal speed profiles under speed limit.
                                                     </figcaption>
                                                 </figure>
                                             </td>
