--- a/research.html
+++ b/research.html
@@ -266,23 +266,23 @@
                                             <!-- Right: Text -->
                                             <td style="width:50%;vertical-align:top;">
                                                 <p> As line conditions grow more complex, 
-                                                    classical optimal control struggles to compute energy-optimal 
+                                                    classical optimal control struggles to compute energy-efficient 
                                                     train speed profiles. 
                                                     Dynamic programming can handle this numerically, 
                                                     but the standard approach suffers from the <em> curse of 
                                                     dimensionality </em>. To address this, I develop <strong> reinforcement learning </strong> 
-                                                    methods that efficiently approximate the optimal operating profile. 
+                                                    methods that efficiently approximate the optimal speed profiles. 
                                                 </p> 
                                                 <p>
                                                     Concretely, I use three complementary <em> approximators </em> for value functions: a rollout 
-                                                    estimation, an interpolation-based  
-                                                    approximation, and a neural-network approximation. 
-                                                    These learners can closely match solutions from the classical maximum 
+                                                    estimator, an interpolation-based  
+                                                    approximator, and a neural-network approximator. 
+                                                    The resultant strategies can closely match solutions from the classical maximum 
                                                     principle. To make the comparison, I resolve 
                                                     an open question 
                                                     by proving the <strong> uniqueness </strong> of the optimal trajectory 
                                                     under <em>speed limit</em>  constraints (see left figure). 
-                                                    The framework yields <em> energy-efficient  </em>driving  stratefies in both single-train and multi-train operations 
+                                                    The proposed approach yields <em> energy-efficient  </em>driving  stratefies in both single-train and multi-train operations 
                                                     when exploiting <em> regenerative energy </em>. </p>
                                             </td>
                                         </tr>
