Update website content

--- a/research.html
+++ b/research.html
@@ -282,7 +282,7 @@
                                                     an open question 
                                                     by proving the <strong> uniqueness </strong> of the optimal trajectory 
                                                     under <em>speed limit</em>  constraints (see left figure). 
-                                                    The proposed approach yields <em> energy-efficient  </em>driving  stratefies in both single-train and multi-train operations 
+                                                    The proposed approach yields <em> energy-efficient  </em>driving  strategies in both single-train and multi-train operations 
                                                     when exploiting <em> regenerative energy </em>. </p>
                                             </td>
                                         </tr>
