Update website content

--- a/research.html
+++ b/research.html
@@ -265,7 +265,7 @@
 
                                             <!-- Right: Text -->
                                             <td style="width:50%;vertical-align:top;">
-                                                <p> As line conditions and train dynamics grow more complex, 
+                                                <p> As line conditions and operating scenarios grow more complex, 
                                                     classical optimal control struggles to compute energy-efficient 
                                                     train speed profiles. 
                                                     Dynamic programming can handle this numerically, 
